# voxit

./: .gitignore  .taplo.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: language.yml  release.yml
apps/voxit/: Cargo.toml  build.rs
apps/voxit/osx/: Info.plist.ext
apps/voxit/src/: hotkey_macos.rs  main.rs
assets/app-icon/composer/AppIcon.icon/: icon.json
docs/: governance.md  index.md  policy.md
docs/decisions/: contextual-voice-layer.md  index.md  native-ui-boundary.md
docs/guide/: index.md
docs/plans/: 2026-03-01-audio-input-device-selection-design.md  2026-03-01-audio-input-device-selection.md
docs/reference/: index.md  repository-layout.md  workspace-layout.md
docs/runbook/: first-run-onboarding.md  first-run.md  index.md
docs/spec/: contextual-voice.md  index.md  runtime.md  system_voxit_v1.md
native/macos-host/: Package.swift
native/macos-host/Sources/CVoxitHostFFI/: module.modulemap
native/macos-host/Sources/CVoxitHostFFI/include/: voxit_host_ffi_shim.h
native/macos-host/Sources/VoxitHostBridge/: HostFFI.swift
native/macos-host/Sources/VoxitHostBridgeProbe/: main.swift
native/macos-host/Sources/VoxitNativeHost/: VoxitNativeHostMain.swift
native/macos-host/Sources/VoxitNativeHostKit/App/: VoxitNativeHostApp.swift
native/macos-host/Sources/VoxitNativeHostKit/Models/: NavigationItem.swift
native/macos-host/Sources/VoxitNativeHostKit/Stores/: HostStore.swift  VoxitSettingsStore.swift
native/macos-host/Sources/VoxitNativeHostKit/Support/: GlobalHotkeyMonitor.swift  Labels.swift  MenuShortcuts.swift  RecordingHUDWindowController.swift  VoxitArtwork.swift  VoxitSettingsWindowController.swift
native/macos-host/Sources/VoxitNativeHostKit/Views/: ContentView.swift  DetailView.swift  RecordingHUDView.swift  SidebarView.swift  VoxitSettingsView.swift
scripts/: build_and_run.sh  bundle-and-open-macos.sh
src/: cli.rs  main.rs
