[workspace]
members  = ["apps/*", "packages/*"]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
categories  = []
description = "AI-first dictation app with live and finalized transcription pipelines."
edition     = "2024"
homepage    = "https://hack.ink/voxit"
keywords    = []
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/voxit"
version     = "0.1.0"

[profile.final-release]
inherits = "release"
lto      = true
