[workspace]
members  = ["packages/*"]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
categories  = []
description = "AI-first dictation app with live and finalized transcription pipelines."
edition     = "2024"
homepage    = "https://hack.ink/voxit"
keywords    = []
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/voxit"
version     = "0.1.0"

[workspace.dependencies]
base64                     = { version = "0.22" }
block2                     = { version = "0.6.2" }
core-foundation            = { version = "0.10" }
core-foundation-sys        = { version = "0.8" }
coreaudio                  = { package = "coreaudio-rs", version = "0.14" }
directories                = { version = "6.0" }
futures-util               = { version = "0.3" }
hound                      = { version = "3.5" }
http                       = { version = "1.4" }
keyring                    = { version = "3.6", features = ["apple-native"] }
objc2-app-kit              = { version = "0.3.2", default-features = false, features = ["NSRunningApplication"] }
objc2-audio-toolbox        = { version = "0.3" }
objc2-av-foundation        = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-foundation           = { version = "0.3.2", default-features = false, features = ["NSObjCRuntime", "NSObject", "NSString", "alloc", "std"] }
objc2-local-authentication = { version = "0.3.2", default-features = false, features = ["LAContext", "alloc", "std"] }
reqwest                    = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "rustls"] }
security-framework-sys     = { version = "2.17" }
serde                      = { version = "1.0", features = ["derive"] }
serde_json                 = { version = "1.0" }
sha2                       = { version = "0.10" }
tokio                      = { version = "1.52", features = ["rt-multi-thread", "time"] }
tokio-tungstenite          = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
tracing                    = { version = "0.1" }
url                        = { version = "2.5" }
voxit-audio                = { version = "0.1.0", path = "packages/voxit-audio" }
voxit-core                 = { version = "0.1.0", path = "packages/voxit-core" }
voxit-macos                = { version = "0.1.0", path = "packages/voxit-macos" }
webbrowser                 = { version = "1.2" }

[profile.final-release]
inherits = "release"
lto      = true
