[package]
authors.workspace     = true
build                 = "build.rs"
categories            = []
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords              = []
license.workspace     = true
name                  = "voxit"
readme.workspace      = true
repository.workspace  = true
resolver              = "3"
version.workspace     = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.bundle]
identifier          = "ink.hack.voxit"
name                = "Voxit"
osx_info_plist_exts = ["apps/voxit/osx/Info.plist.ext"]

[features]
default = []

[dependencies]
color-eyre         = { version = "0.6" }
directories        = { version = "6.0" }
eframe             = { version = "0.33" }
global-hotkey      = { version = "0.7", default-features = false }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
voxit-audio        = { path = "../../packages/voxit-audio" }
voxit-core         = { path = "../../packages/voxit-core" }
voxit-macos        = { path = "../../packages/voxit-macos" }

[build-dependencies]
vergen-gitcl = { version = "9.1", features = ["cargo"] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard   = "3.6.1"
enigo     = "0.6.1"
tray-icon = "0.21"
